AX: iOS: VoiceOver can't access attachments in mail messages https://bugs.webkit.org/show_bug.cgi?id=158198

Reviewed by Joanmarie Diggs.

Source/WebCore:

Replaced elements, like attachemnts, were not being exposed in the attributed string returned to VoiceOver.
Make sure they are exposed with the attachment character, pointing to the actual element.

Test: accessibility/ios-simulator/attributed-string-for-range.html

* accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(AccessibilityUnignoredAncestor):
(-[WebAccessibilityObjectWrapper _stringForRange:attributed:]):

Tools:

* DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
(AccessibilityUIElement::stringForRange):
(AccessibilityUIElement::attributedStringForRange):
(AccessibilityUIElement::attributedStringRangeIsMisspelled):
* WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::attributedStringForRange):
(WTR::AccessibilityUIElement::attributedStringRangeIsMisspelled):

LayoutTests:

* accessibility/ios-simulator/attributed-string-for-range.html: Added.


Canonical link: https://commits.webkit.org/176361@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201568 268f45cc-cd09-0410-ab3c-d52691b4dbfc